# adventure-project-backend

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
api/: index.ts
rust-microservices/: docker-compose.yml
rust-microservices/services/api-service/: Cargo.toml  Dockerfile
rust-microservices/services/api-service/src/: main.rs  proxy.rs
rust-microservices/services/auth-service/: Cargo.toml  Dockerfile
rust-microservices/services/auth-service/src/: handlers.rs  jwt.rs  main.rs  password.rs  store.rs
rust-microservices/services/data-service/: Cargo.toml  Dockerfile  README.md
rust-microservices/services/data-service/src/: main.rs
rust-microservices/services/test-service/: Cargo.toml  Dockerfile
rust-microservices/services/test-service/src/: main.rs
src/: app.ts  db.ts  server.ts
src/middleware/: auth.ts
src/routes/: auth.ts  health.ts
src/utils/: password.ts  validation.ts
